# suppylib

./: README.md  setup.cfg
src/suppylib/: bot.py  logging.py  messaging.py  navigation.py
