[metadata]
name = suppylib
version = 0.0.4
author = Orel Fichman
author_email = orel@fichman.co.il
description = A library using Selenium to control WhatsApp Web
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/b1t3x/suppylib
project_urls =
    Bug Tracker = https://github.com/b1t3x/suppylib/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
